# BlameMySelf.hpp

./: BlameMyself.cpp  BlameMyself.hpp  CMakeLists.txt  Includes.conf  LICENSE  README.md  main.cpp
